force-app/main/default/objects/DRE__DTE_Plan_Rule__c/DRE__DTE_Plan_Rule__c.object-meta.xml
<CustomObject>
    <label>DTE Test Rule Link</label>
    <nameField>
        <displayFormat>DTELINK-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Test Rule Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>