force-app/main/default/objects/DRE__DTE_Plan_Rule__c/fields/DRE__Description__c.field-meta.xml
<CustomField>
    <fullName>DRE__Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>