force-app/main/default/objects/DRE__DTE_Plan_Rule__c/fields/DRE__DRE_Rule__c.field-meta.xml
<CustomField>
    <fullName>DRE__DRE_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRE Rule</label>
    <referenceTo>DRE__DRE_Rule__c</referenceTo>
    <relationshipLabel>DTE Test Cases</relationshipLabel>
    <relationshipName>DTE_Plan_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>