force-app/main/default/objects/DRE__DTE_Plan_Rule__c/fields/DRE__DTE_Plan__c.field-meta.xml
<CustomField>
    <fullName>DRE__DTE_Plan__c</fullName>
    <label>DTE Test Case</label>
    <referenceTo>DRE__DTE_Plan__c</referenceTo>
    <relationshipLabel>DRE Rules</relationshipLabel>
    <relationshipName>DTE_Plan_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>